restoring deletion policy

--- a/aws/cloudformation/metaflow-cfn-template.yml
+++ b/aws/cloudformation/metaflow-cfn-template.yml
@@ -410,6 +410,7 @@ Resources:
       TargetType: AWS::RDS::DBInstance
   MetaflowS3Bucket:
     Type: 'AWS::S3::Bucket'
+    DeletionPolicy: Retain
     Properties:
       AccessControl: Private
       BucketEncryption:
