--- a/aws/cloudformation/metaflow-cfn-template.yml
+++ b/aws/cloudformation/metaflow-cfn-template.yml
@@ -1111,7 +1111,7 @@ Resources:
               # due to restrictions regarding IAM policies and conditional resources like the API key, we are not 
               # retrieving automatically here. 
               if [[ "${APIBasicAuth}" == "true" ]]; then 
-                echo "\"METAFLOW_SERVICE_AUTH_KEY\": \"PASTE_ACCESS_KEY_HERE\"," >> $metaflow_config_file
+                echo "\"METAFLOW_SERVICE_AUTH_KEY\": \"PASTE_API_KEY_HERE\"," >> $metaflow_config_file
               fi
 
               echo '"METAFLOW_DEFAULT_DATASTORE": "s3",' >> $metaflow_config_file
