--- a/aws/cloudformation/metaflow-cfn-template.yml
+++ b/aws/cloudformation/metaflow-cfn-template.yml
@@ -64,8 +64,6 @@ Mappings:
       value: 'metadata-service'
     ImageUrl:
       value: 'netflixoss/metaflow_metadata_service'
-    DBMigrateImage:
-      value: 'queueburt/simplebatch:v0.5'
     ContainerPort:
       value: 8080
     ContainerCpu:
@@ -353,32 +351,6 @@ Resources:
         - ContainerName: !FindInMap ['ServiceInfo', 'ServiceName', 'value']
           ContainerPort: !FindInMap ['ServiceInfo', 'ContainerPort', 'value']
           TargetGroupArn: !Ref 'NLBTargetGroup'
-  MigrationTaskDefinition:
-    Type: AWS::ECS::TaskDefinition
-    Properties:
-      Family: !Join ['-', [!Ref 'AWS::StackName', 'db-migration']]
-      Cpu: 1024
-      Memory: 2048
-      NetworkMode: awsvpc
-      RequiresCompatibilities:
-        - FARGATE
-      ExecutionRoleArn: !Ref 'ECSTaskExecutionRole'
-      TaskRoleArn: !GetAtt 'MetadataSvcECSTaskRole.Arn'
-      ContainerDefinitions:
-        - Name: 'db-migration'
-          Cpu: 1024
-          Memory: 2048
-          Image: !FindInMap ['ServiceInfo', 'DBMigrateImage', 'value']
-          LogConfiguration:
-            LogDriver: awslogs
-            Options:
-              awslogs-group: !Join ['', ['/ecs/', !Ref 'AWS::StackName', '-', 'db-migration']]
-              awslogs-region: !Ref 'AWS::Region'
-              awslogs-stream-prefix: 'ecs'
-  MigrationLogGroup:
-    Type: AWS::Logs::LogGroup
-    Properties:
-      LogGroupName: !Join ['', ['/ecs/', !Ref 'AWS::StackName', '-', 'db-migration']]
   LambdaECSExecuteRole:
     Type: AWS::IAM::Role
     Properties:
@@ -407,21 +379,17 @@ Resources:
                 - logs:PutLogEvents
                 - logs:CreateLogStream
               Resource: !Join [ "", [ 'arn:aws:logs:', !Ref 'AWS::Region', ':', !Ref 'AWS::AccountId', ':log-group:/aws/lambda/', !Ref 'AWS::StackName', '-migrate-db:*'] ]
-        - PolicyName: ECS
+        - PolicyName: VPC
           PolicyDocument:
             Version: '2012-10-17'
             Statement:
-            - Sid: ECSTasks
+            - Sid: NetInts
               Effect: Allow
-              Action: "ecs:RunTask"
-              Condition:
-                ArnEquals:
-                  ecs:cluster: !GetAtt 'ECSCluster.Arn'
-              Resource: !Ref MigrationTaskDefinition
-            - Sid: PassRole
-              Effect: Allow
-              Action: "iam:PassRole"
-              Resource: !Sub "arn:aws:iam::${AWS::AccountId}:role/${AWS::StackName}-*"
+              Action:
+                - ec2:CreateNetworkInterface
+                - ec2:DescribeNetworkInterfaces
+                - ec2:DeleteNetworkInterface
+              Resource: '*'
   ExecuteDBMigration:
     Type: AWS::Lambda::Function
     Properties:
@@ -430,33 +398,26 @@ Resources:
       Handler: index.handler
       Environment:
         Variables:
-          ECS_CLUSTER: !Ref ECSCluster
-          ECS_TASK_DEF: !Ref MigrationTaskDefinition
-          ECS_VPC_SUBNET: !Ref Subnet1
+          MD_LB_ADDRESS: !Join ['', ['http://', !GetAtt 'NLB.DNSName', '/ping'] ]
       Code:
         ZipFile: |
-          import boto3, os
+          import os
+          from urllib import request
 
           def handler(event, context):
-            client = boto3.client('ecs')
-            response = client.run_task(
-            cluster=os.environ.get('ECS_CLUSTER'),
-            launchType = 'FARGATE',
-            taskDefinition=os.environ.get('ECS_TASK_DEF'),
-            count = 1,
-            platformVersion='LATEST',
-            networkConfiguration={
-                  'awsvpcConfiguration': {
-                      'subnets': [
-                          os.environ.get('ECS_VPC_SUBNET')
-                      ],
-                      'assignPublicIp': 'ENABLED'
-                  }
-              })
-              
-            return str(response)
+            with request.urlopen(os.environ.get('MD_LB_ADDRESS')) as metadata:
+              response = metadata.read()
+                
+            return(response)
       Description: Trigger DB Migration
       FunctionName: !Join ['-', [!Ref 'AWS::StackName', 'migrate-db'] ]
+      Timeout: 10
+      VpcConfig: 
+        SecurityGroupIds: 
+          - !GetAtt VPC.DefaultSecurityGroup
+        SubnetIds: 
+          - !Ref Subnet1
+          - !Ref Subnet2
   NLBTargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
@@ -793,14 +754,6 @@ Resources:
                 Condition:
                   "Null":
                     events:source: true
-        - PolicyName: AllowLambda
-          PolicyDocument:
-            Version: '2012-10-17'
-            Statement:
-              - Sid: Execute
-                Effect: Allow
-                Action: "lambda:InvokeFunction"
-                Resource: !GetAtt ExecuteDBMigration.Arn
   EventBridgeRole:
     Type: AWS::IAM::Role
     Properties:
