--- a/aws/cloudformation/metaflow-cfn-template.yml
+++ b/aws/cloudformation/metaflow-cfn-template.yml
@@ -59,6 +59,11 @@ Parameters:
     Default: 'true'
     AllowedValues: ['false', 'true']
     Description: 'Enable Sagemaker Notebooks'
+  BatchType:
+    Type: String
+    Default: 'ec2'
+    AllowedValues: ['ec2', 'fargate']
+    Description: 'AWS Batch Compute Type'
   IAMPartition:
     Type: String
     Default: 'aws'
@@ -90,6 +95,7 @@ Mappings:
 Conditions:
   EnableAuth: !Equals [ !Ref APIBasicAuth, 'true']
   EnableRole: !Equals [ !Ref CustomRole, 'true']
+  BatchFargate: !Equals [ !Ref BatchType, 'fargate']
   EnableSagemaker: !Equals [ !Ref EnableSagemaker, 'true']
   IsGov: !Equals [ !Ref IAMPartition, 'aws-us-gov']
 Resources:
@@ -1067,6 +1073,16 @@ Resources:
                 - "dynamodb:GetItem"
                 - "dynamodb:UpdateItem"
               Resource: !Sub arn:${IAMPartition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${StepFunctionsStateDDB}
+        - PolicyName: Cloudwatch
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+            - Sid: AllowPutLogs
+              Effect: Allow
+              Action:
+                - 'logs:CreateLogStream'
+                - 'logs:PutLogEvents'
+              Resource: '*'
   BatchExecutionRole:
     Type: AWS::IAM::Role
     Properties:
@@ -1195,14 +1211,14 @@ Resources:
         MaxvCpus: !Ref MaxVCPUBatch
         SecurityGroupIds:
           - !GetAtt VPC.DefaultSecurityGroup
-        Type: EC2
+        Type: !If [BatchFargate, 'FARGATE', 'EC2']
         Subnets:
           - !Ref Subnet1
           - !Ref Subnet2
-        MinvCpus: !Ref MinVCPUBatch
-        InstanceRole: !GetAtt 'ECSInstanceProfile.Arn'
-        InstanceTypes: !Ref ComputeEnvInstanceTypes
-        DesiredvCpus: !Ref DesiredVCPUBatch
+        MinvCpus: !If [BatchFargate, !Ref AWS::NoValue, !Ref MinVCPUBatch]
+        InstanceRole: !If [BatchFargate, !Ref AWS::NoValue, !GetAtt 'ECSInstanceProfile.Arn']
+        InstanceTypes: !If [BatchFargate, !Ref AWS::NoValue, !Ref ComputeEnvInstanceTypes]
+        DesiredvCpus: !If [BatchFargate, !Ref AWS::NoValue, !Ref DesiredVCPUBatch]
       State: ENABLED
   JobQueue:
     DependsOn: ComputeEnvironment
