Updated with new "DescribeComputeEnvironments" permission

--- a/aws/cloudformation/metaflow-cfn-template.yml
+++ b/aws/cloudformation/metaflow-cfn-template.yml
@@ -746,6 +746,7 @@ Resources:
                 - "batch:DescribeJobDefinitions"
                 - "batch:DescribeJobQueues"
                 - "batch:RegisterJobDefinition"
+                - "batch:DescribeComputeEnvironments"
               Resource: '*'
             - Sid: DefinitionsPermissions
               Effect: Allow
