--- a/metaflowbot/manifest.yml
+++ b/metaflowbot/manifest.yml
@@ -7,7 +7,7 @@ features:
   app_home:
     home_tab_enabled: false
     messages_tab_enabled: true
-    messages_tab_read_only_enabled: true
+    messages_tab_read_only_enabled: false
   bot_user:
     display_name: flowey
     always_online: true
