--- a/metaflowbot/manifest.yml
+++ b/metaflowbot/manifest.yml
@@ -11,38 +11,23 @@ features:
   bot_user:
     display_name: flowey
     always_online: true
-  slash_commands:
-    - command: /flowey
-      description: "Calls Flowey "
-      usage_hint: /flowey [list-runs, subscribe, help]
-      should_escape: false
 oauth_config:
   scopes:
     bot:
       - app_mentions:read
-      - channels:history
+      - channels:manage
       - channels:read
       - chat:write
-      - files:read
-      - groups:history
-      - groups:read
       - im:history
       - im:read
-      - links:read
-      - mpim:history
-      - mpim:read
-      - users:read
-      - users:read.email
-      - mpim:write
       - im:write
-      - groups:write
-      - channels:manage
-      - commands
+      - users:read.email
+      - users:read
 settings:
   event_subscriptions:
     bot_events:
-      - message.channels
       - message.im
+      - app_mention
   interactivity:
     is_enabled: true
   org_deploy_enabled: false
