Fixed bug for all `new_thread` events: - new thread events were not correctly setting state all the time - Added code to accomodate statefulness concretely

--- a/metaflowbot/metaflowbot/actions/jokes/rules.yml
+++ b/metaflowbot/metaflowbot/actions/jokes/rules.yml
@@ -3,3 +3,11 @@
   message: tell me a joke
   action:
     op: joke
+
+
+- name: Tell me a Joke
+  event_type: new_thread
+  message: tell me a joke
+  action:
+    op: joke
+    create-thread: true
