--- a/metaflowbot/metaflowbot/actions/basic/rules.yml
+++ b/metaflowbot/metaflowbot/actions/basic/rules.yml
@@ -1,30 +1,35 @@
-- name: First message of the thread
-  event_type: new_thread
-  action:
-    op: new-thread
-
-
 - name: First message of the thread, requesting help
   event_type: new_thread
   message: help(.*)|how to(.*)
   action:
     op: new-thread
+    create-thread: true
 
 - name: Generic help fallback
   event_type: user_message
   message: help(.*)|how to(.*)
   action:
     op: new-thread
+    create-thread: false
 
 
 - name: find version
   event_type: new_thread
-  message: version
+  message: (version|--version)
   action:
     op: version
+    create-thread: true
 
 - name: find version
   event_type: user_message
   message: (version|--version)
   action:
     op: version
+    create-thread: false
+
+# This should be last fallback rule for new thread.
+- name: First message of the thread
+  event_type: new_thread
+  action:
+    op: new-thread
+    create-thread: true
