--- a/aws/cloudformation/metaflow-cfn-template.yml
+++ b/aws/cloudformation/metaflow-cfn-template.yml
@@ -72,7 +72,7 @@ Parameters:
   AdditionalWorkerPolicyArn:
     Type: String
     Default: ''
-    Description: 'Additional IAM Policy ARN to attach to Batch Compute Environment.'
+    Description: 'Additional IAM Policy ARN to attach to Batch Compute Environment (leave empty, unless you know what you are doing)'
 
 Mappings:
   ServiceInfo:
