Move docs/gh actions folder + clear nits. - Fixed comments at place - Readme changes. - Removed Dead code. - Removing Unused imports - fixed date time parsing.

--- a/metaflowbot/extensions/jokes-command/metaflowbot/actions/jokes/rules.yml
+++ b/metaflowbot/extensions/jokes-command/metaflowbot/actions/jokes/rules.yml
@@ -1,11 +1,11 @@
-- name: Tell me a Joke
+- name: Tell me a joke
   event_type: user_message
   message: tell me a joke
   action:
     op: joke
 
 
-- name: Tell me a Joke
+- name: Tell me a joke
   event_type: new_thread
   message: tell me a joke
   action:
