--- a/metaflowbot/extras/heroku/.github/workflows/deploy.yml
+++ b/metaflowbot/extras/heroku/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
-name: Deploy
+name: deploy
 on:
   push:
     tags: releases/[1-9]+.[0-9]+.[0-9]+
-    branches: metaflowbot-v2
+    branches: master
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,6 +18,8 @@ jobs:
           rollbackonhealthcheckfailed: false
           docker_heroku_process_type: "worker"
         env:
+          # these environment variables are set with HD_ prefix because
+          # artifacts with HD_ prefix are shared like secrets on heroku
           HD_AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_TOKEN }}
           HD_AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_TOKEN }}
           HD_SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
@@ -27,6 +29,3 @@ jobs:
           HD_METAFLOW_SERVICE_URL: ${{ secrets.METAFLOW_SERVICE_URL }}
           HD_ADMIN_USER_ADDRESS: ${{secrets.ADMIN_USER_ADDRESS}}
           HD_METAFLOW_DATASTORE_SYSROOT_S3: ${{secrets.METAFLOW_DATASTORE_SYSROOT_S3}}
-          HD_METAFLOW_DATATOOLS_SYSROOT_S3: ${{secrets.METAFLOW_DATATOOLS_SYSROOT_S3}}
-          HD_METAFLOW_DEFAULT_METADATA: "service"
-          HD_METAFLOW_DEFAULT_DATASTORE: "s3"
